--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Фамилия и ИСУ ID</title>
 </head>
 <body>
-    <h1>Фамилия: Генералова Анна Петровна</h1>
+    <h1>Генералова Анна Петровна</h1>
     <p>ИСУ ID: 336479</p>
 </body>
 </html>
